<resources>
    <string name="app_name">FavouritePersons</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="btn_submit">Сохранить</string>
    <string name="e_mail_hint">E-mail</string>
    <string name="phone_hint">Номер телефона</string>
    <string name="address_hint">Адрес</string>
    <string name="image_link">Ссылка на фотку</string>
    <string name="gender_hint">Пол</string>
    <string name="birthdate_hint">Дата рождения</string>
    <string name="score_hint">Итоговый балл</string>
    <string name="person_layout_titile_edit">Редактирование пользователя</string>
    <string name="person_layout_titile_add">Добавление пользователя</string>
    <string name="start_screen_no_persons_text">Нет ни одного человечка( \n Нажми на кнопку в правом нижнем углу</string>
</resources>